#4910# Locale updates, round 1

--- a/locale/es_ES/admin.xml
+++ b/locale/es_ES/admin.xml
@@ -22,22 +22,22 @@
 	<message key="admin.clearTemplateCache">Vaciar la cache de la plantilla</message>
 	<message key="admin.configFileUpdatedInstructions"><![CDATA[Su fichero de configuración ha sido guardado. Tenga en cuenta que si el sitio deja de funcionar correctamente es posible que necesite corregir la configuración manualmente editando el fichero <tt>config.inc.php</tt> directamente.]]></message>
 	<message key="admin.confirmClearTemplateCache">¿Seguro que desea vaciar la caché de las plantillas compiladas?</message>
-	<message key="admin.confirmExpireSessions">¿Seguro que desea cerrar todas las sesiones? Esto obligará a todos/as los/as usuarios/as logados en el sistema en este momento a identificarse de nuevo (incluyéndole a usted).</message>
+	<message key="admin.confirmExpireSessions">¿Seguro que desea cerrar todas las sesiones? Esto obligará a todos/as los/as usuarios/as que han iniciado sesión en el sistema a identificarse de nuevo (incluyéndole a usted).</message>
 	<message key="admin.contentsOfConfigFile">Contenido del fichero de configuración</message>
 	<message key="admin.currentVersion">Versión actual</message>
 	<message key="admin.dateInstalled">Fecha de instalación</message>
 	<message key="admin.displayConfigFileInstructions"><![CDATA[El contenido de su configuración actualizada se muestra abajo. Para aplicar los cambios debe abrir el fichero <tt>config.inc.php</tt> en un editor de texto y reemplazar el texto existente con el que le mostramos abajo.]]></message>
 	<message key="admin.displayNewSystemConfig">Mostrar nueva configuración</message>
 	<message key="admin.expireSessions">Caducidad de las sesiones</message>
-	<message key="admin.languages.confirmReload">¿Seguro que quiere recargar este locale? Esta acción eliminará cualquier información específica de un locale como pueden ser las plantillas para correo-e personalizadas.</message>
+	<message key="admin.languages.confirmReload">¿Seguro que quiere recargar este fichero de idioma? Esta acción eliminará cualquier información específica de un fichero de idioma como pueden ser las plantillas para correo-e personalizadas.</message>
 	<message key="admin.languages.installedLocales">Locales instalados</message>
 	<message key="admin.languages.installLanguages">Gestionar locales</message>
 	<message key="admin.languages.installLocales">Instalar</message>
-	<message key="admin.languages.installNewLocales">Instalar locales</message>
+	<message key="admin.languages.installNewLocales">Instalar nuevos ficheros de idiomas</message>
 	<message key="admin.languages.languageSettings">Configuración de idioma</message>
 	<message key="admin.languages.noLocalesAvailable">No existen locales adicionales disponibles para la instalación.</message>
-	<message key="admin.languages.reload">Recargar locale</message>
-	<message key="admin.languages.uninstall">Desinstalar locale</message>
+	<message key="admin.languages.reload">Recargar ficheros de idiomas</message>
+	<message key="admin.languages.uninstall">Desinstalar fichero de idiomas</message>
 	<message key="admin.phpInfo">Información PHP extendida</message>
 	<message key="admin.saveSystemConfig">Guardar configuración</message>
 	<message key="admin.server.apacheVersion">Versión Apache</message>
@@ -75,10 +75,10 @@
 	<message key="admin.version.downloadPatch">Descargar parche</message>
 	<message key="admin.versionHistory">Historial de versiones</message>
 	<message key="admin.version.latest">Última versión</message>
-	<message key="admin.versionMajor">Major</message>
-	<message key="admin.versionMinor">Minor</message>
+	<message key="admin.versionMajor">Mayor</message>
+	<message key="admin.versionMinor">Menor</message>
 	<message key="admin.version.moreInfo">Más información</message>
-	<message key="admin.versionRevision">Revision</message>
+	<message key="admin.versionRevision">Revisión</message>
 	<message key="admin.version.updateAvailable">Hay una nueva versión disponible</message>
 	<message key="admin.version.upToDate">Su sistema está actualizado</message>
 	<message key="admin.version">Versión</message>
