#4884# minor Basque (eu_ES) update

--- a/locale/eu_ES/manager.xml
+++ b/locale/eu_ES/manager.xml
@@ -9,7 +9,7 @@
   *
   * Localization strings for the eu_ES (Basque (Euskara)) locale.
   *
-  * $Id: manager.xml,v 1.2 2009/10/07 21:13:19 asmecher Exp $
+  * $Id$
   -->
 
 <locale name="eu_ES" full_name = "Basque (Euskara)">
@@ -167,4 +167,5 @@
 	<message key="plugins.categories.reports">Txostenen pluginak</message>
 	<message key="plugins.categories.themes.description">Sistemaren itxura aldatzeko erabiltzen dira Temen pluginak.</message>
 	<message key="plugins.categories.themes">Temen pluginak</message>
+	<message key="manager.people.mustChooseRole">Hautatu funtzio bat orriaren goialdean "Inskribatu erabiltzailea"n klik egin aurretik.</message>
 </locale>
