--- a/locale/eu_ES/common.xml
+++ b/locale/eu_ES/common.xml
@@ -9,7 +9,7 @@
   *
   * Localization strings for the eu_ES (Basque (Euskara)) locale.
   *
-  * $Id: common.xml,v 1.2 2009/10/07 21:13:19 asmecher Exp $
+  * $Id$
   -->
 
 <locale name="eu_ES" full_name = "Basque (Euskara)">
@@ -269,4 +269,5 @@
 	<message key="search.titleIndex">Arakatu tituluen indizea</message>
 	<message key="search.title">Titulua</message>
 	<message key="search.typeMethodApproach">Mota (metodoa/hurbilketa)</message>
+	<message key="common.re">Re:</message>
 </locale>
