--- a/locale/ru_RU/manager.xml
+++ b/locale/ru_RU/manager.xml
@@ -17,11 +17,11 @@
 	<message key="manager.announcements.confirmDelete">Уверены, что хотите навсегда удалить это объявление?</message>
 	<message key="manager.announcements.create">Создать новое объявление</message>
 	<message key="manager.announcements.createTitle">Создать</message>
-	<message key="manager.announcements.dateExpire">Теряет актуальность</message>
+	<message key="manager.announcements.dateExpire">Актуально до</message>
 	<message key="manager.announcements.edit">Редактировать объявление</message>
 	<message key="manager.announcements.editTitle">Редактировать</message>
 	<message key="manager.announcements.form.dateExpireDayIncompleteDate">Пожалуйста выберите год и/или месяц в добавок ко дню потери актуальности.</message>
-	<message key="manager.announcements.form.dateExpire">Дата потери актуальности</message>
+	<message key="manager.announcements.form.dateExpire">Актуально до</message>
 	<message key="manager.announcements.form.dateExpireInstructions">Объявление будет демонстрироваться читателям до истечения этой даты. Оставьте поле пустым для того, чтобы оставить эту дату неопределенной.</message>
 	<message key="manager.announcements.form.dateExpireMonthIncompleteDate">Пожалейста выберите год и/или день вдобавок к месяцу потери актуальности.</message>
 	<message key="manager.announcements.form.dateExpireValid">Пожалуйста введите корректную дату потери актуальности.</message>
@@ -80,7 +80,7 @@
 	<message key="manager.files.uploadFile">Загрузить файл</message>
 	<message key="manager.groups.confirmDelete">Уверены, что хотите удалить эту группу?</message>
 	<message key="manager.groups.createTitle">Создать Название</message>
-	<message key="manager.groups.editTitle">Редактировать Название</message>
+	<message key="manager.groups.editTitle">Править Название</message>
 	<message key="manager.groups.form.groupTitleRequired">Требуется название группы.</message>
 	<message key="manager.groups.membership.addMember">Добавить члена</message>
 	<message key="manager.groups.membership.confirmDelete">Вы уверены, что хотите удалить это членство в группе?</message>
@@ -100,10 +100,10 @@
 	<message key="manager.people.disable">Деактивировать</message>
 	<message key="manager.people.doNotEnroll">Не назначать</message>
 	<message key="manager.people.editProfile">Редакция профиля</message>
-	<message key="manager.people.editUser">Править пользователя</message>
+	<message key="manager.people.editUser">Править профиль</message>
 	<message key="manager.people.emailUsers.emailSelectedUsers">Послать письма выбранным пользователям</message>
-	<message key="manager.people.emailUsers.emailUsersEnrolledAs">Послать письма пользователям, назначенным на должности</message>
-	<message key="manager.people.emailUsers">Послать письма пользователям</message>
+	<message key="manager.people.emailUsers.emailUsersEnrolledAs">Послать письма пользователям в роли</message>
+	<message key="manager.people.emailUsers">Послать письма</message>
 	<message key="manager.people.emailUsers.selectLocale">Выбрать язык</message>
 	<message key="manager.people.emailUsers.selectUsers">Выбрать пользователей</message>
 	<message key="manager.people.enable">Активировать</message>
@@ -113,11 +113,11 @@
 	<message key="manager.people.enrollSyncRole">Синхронизировать роль</message>
 	<message key="manager.people.enrollSync">Синхронизировать</message>
 	<message key="manager.people.enrollUserAsDescription">Пользователей можно назначить или снять с любой роли в любое время.</message>
-	<message key="manager.people.enrollUserAs">Назначить пользователя на должность</message>
+	<message key="manager.people.enrollUserAs">Назначить на роль</message>
 	<message key="manager.people.invalidUser">Данный пользователь не существует.</message>
-	<message key="manager.people.mergeUser">Слияние данных о пользователе</message>
+	<message key="manager.people.mergeUser">Объединить</message>
 	<message key="manager.people.mergeUsers.confirm">Вы уверены, что хотите влить данные пользователя "{$oldUsername}" в учетную запись пользователя "{$newUsername}"? Пользователь "{$oldUsername}" будет после этого удален. Это действие невозможно будет потом отменить.</message>
-	<message key="manager.people.mergeUsers">Объединить пользователей</message>
+	<message key="manager.people.mergeUsers">Объединить</message>
 	<message key="manager.people.mustChooseRole">Пожалуйста выберите роль вверху страницы перед тем как нажать "Привлечь пользователя".</message>
 	<message key="manager.people.mustProvideName">Пожалуйста введите хотя-бы фамилию пользователя.</message>
 	<message key="manager.people.noMatchingUsers">Нет соответствий.</message>
@@ -157,7 +157,7 @@
 	<message key="plugins.categories.blocks">Модули Блоков</message>
 	<message key="plugins.categories.blocks.description">Модули блоков -- подсоединяемые компоненты пользовательского интерфейса, такие как инструменты на боковых панелях.</message>
 	<message key="plugins.categories.citationFormats">Модули Оформления Ссылок</message>
-	<message key="plugins.categories.gateways.description">Модули Шлюзов служат для постоянной передачи в реальном времени изменяющихся данных из этой системы в другие.</message>
+	<message key="plugins.categories.gateways.description">Модули Шлюзов служат для передачи в реальном времени данных из этой системы в другие.</message>
 	<message key="plugins.categories.gateways">Модули Шлюзов</message>
 	<message key="plugins.categories.generic">Остальные Модули</message>
 	<message key="plugins.categories.importexport.description">Модули Импорта/Экспорта служат для обмена метаданными и данными с другими системами.</message>
